Fix Dark mode and resposivenss on PageRSEProtocols #372

--- a/src/component-library/outputtailwind.css
+++ b/src/component-library/outputtailwind.css
@@ -2451,6 +2451,11 @@ html {
     background-color: rgb(190 24 93 / var(--tw-bg-opacity));
   }
 
+  .dark\:bg-pink-900 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(131 24 67 / var(--tw-bg-opacity));
+  }
+
   .dark\:bg-purple-600 {
     --tw-bg-opacity: 1;
     background-color: rgb(147 51 234 / var(--tw-bg-opacity));
